--- a/frontend/webapp-todo/Dockerfile
+++ b/frontend/webapp-todo/Dockerfile
@@ -1,14 +1,14 @@
 FROM node:12.16.1-alpine3.9
 #env
 ENV PORT=3000
-#app directory
-WORKDIR /usr/app
 #dependencies
 COPY package*.json ./
+#app directory
+WORKDIR /app
 #install dependencies
 RUN npm install
-#app source
-COPY . .
+#App data
+COPY [".", "/app/"]
 #port
 EXPOSE 3000:3000
 CMD ["npm", "start"]
