--- a/services/api-todo/package.json
+++ b/services/api-todo/package.json
@@ -16,9 +16,10 @@
   "author": "Facundo Palombo",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "pg": "^8.0.0",
+    "pg": "^8.0.2",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
