--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
       context: ./frontend/webapp-todo/
       dockerfile: Dockerfile
     volumes:
-      - "/frontend/webapp-todo:/app"
       - "/app/node_modules"
+      - "./frontend/webapp-todo:/app/"
     ports:
       - "3000:3000"
     restart: on-failure
@@ -21,8 +21,8 @@ services:
       context: ./services/api-todo/
       dockerfile: Dockerfile
     volumes:
-      - "/services/api-todo:/app"
       - "/app/node_modules"
+      - "./services/api-todo:/app/"
     ports:
       - "3001:3001"
     depends_on:
